--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <h2>My Skills.</h2>
     <div class="skill-row">
       <img class="user-img" src="images/users.png" height=" 200" width="200" alt="skills">
-      <h3>Lorem & Ipsum</h3>
+      <h3>C programming</h3>
       <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
     </div>
     <div class="skill-row">
       <img class="eat-img" src="images/eat.png" height=" 200" width="200" alt="">
-      <h3>Lorem Ipsum Dolor</h3>
+      <h3>Inernet of Things</h3>
       <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
     </div>
   </div>
