--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
       <h3>Inernet of Things </h3>
       <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
     </div>
+      <div class="skill-row">
+      <img class="eat-img" src="images/eat.png" height=" 200" width="200" alt="">
+      <h3>Web development</h3>
+      <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+    </div>
   </div>
   <hr>
   <div class="contact-me">
